--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "scripts": {
+    "start": "browser-sync start --server --files \"*/*.css\" \"*/*.js\" \"*.html\""
+  },
   "dependencies": {
     "add": "^2.0.6",
     "eslint": "^5.14.0",
-    "global": "^4.3.2",
+    "global": "^4.3.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.3",
     "prettier": "^1.16.4"
   }
 }
