아직 화면에 나타나지 않음..

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module"
+    "sourceType": "module",
+    "one-var-declaration-per-line": ["error", "never"]
   }
 }
